# open-stats

./: .flake8  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Makefile  README.md  app.py  openstats.yaml  pyproject.toml  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yaml
openstats/: __init__.py  app.py  cli.py  client.py  components.py  data.py  theme.py
