[build-system]
requires = ["flit_core >=3.6,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openstats"
authors = [{name = "pmbrull", email = "peremiquelbrull@gmail.com"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

readme = "README.md"
dependencies = [
    "streamlit==1.5.0",
    "pandas==1.3.5",
    "requests==2.27.1",
    "watchdog==2.1.6",
    "levy==0.6.1",
    "loguru==0.6.0",
    "typer==0.4.0",
]
requires-python = ">=3.6"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/pmbrull/open-stats"

[project.scripts]
openstats-theme = "openstats.cli:app"

[project.optional-dependencies]
test = [
    "black==22.1.0",
    "isort==5.10.1",
    "pylint==2.12.2",
    "pre-commit==2.17.0",
]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=5.4.0,<6.0.0",
    "markdown-include >=0.5.1,<0.6.0",
]